<resources>
    <string name="app_name">Pravoslavac</string>
    <string name="post_label">POST</string>
    <string name="greg_datum_label">Novi datum</string>
    <string name="pravoslavnipostlabel">POST</string>
    <string name="gregDatum">Novi Datum</string>
    <string name="julijanski_datum">Julijanski Datum</string>
    <string name="svetac_label">Ime svetitelja</string>
    <string name="novi_gregorijanski_datum">Novi-Gregorijanski datum</string>
    <string name="stari_julijanski_kalendar">Stari - Julijanski kalendar</string>
    <string name="btnA">Kalendar</string>
    <string name="btnB">K</string>
    <string name="btnC">$</string>
    <string name="btnD">-</string>
    <string name="todo">TODO</string>
    <string name="msg_token_fmt">"Token is -> %s"</string>
    <string name="msg_subscribed">Prihvacen upis na grupu allDevices</string>
    <string name="msg_subscribe_failed">Failed to subscribe</string>
    <string name="default_notification_channel_id">pojma nemam o cemu se radi</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="jesus">jesus</string>
    <string name="back">Назад</string>
    <string name="selekcija_kalendara_">selekcija kalendara godisnjeg i mesecnog</string>
    <string name="back_button">back button image za kalendar 12 meseci</string>
    <string name="_2020_godina">2020. godina</string>
    <string name="naziv_meseca">Naziv Meseca</string>
    <string name="ime_svetitelja">Ime a Svetitelja</string>
    <string name="datum">21. januar 2020 god.</string>
    <string name="info_text">Хвала Вам што сте изабрали ову апикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на обострано задовољство. Очекујем ваше реакције, примедбе и предлоге на Апле Сторе а ради побољшања исте. Желим и да Вас информишем да сам направио још једну,  комплетну апликакицују, PravoslavacDue , која се такође налази на Апле Сторе. Свако добро.</string>
    <string name="back_btn_info_activity">Back btn info activity</string>
    <string name="info_text2">Хвала Вам што сте изабрали ову уууу апиу апикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на окацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на о апикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на о апикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на о у апикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на оапикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на оапикацију која ће Вам бити од користи надам се, а такође се надам да је довољно добро направљена и да ћете је користити на обострано задовољство. Очекујем ваше реакције, примедбе и предлоге на Апле Сторе а ради побољшања исте. Желим и да Вас информишем да сам направио још једну,  комплетну апликакицују, PravoslavacDue , која се такође налази на Апле Сторе. Свако добро.</string>
    <string name="title_molitve_list">Items</string>
    <string name="title_molitve_detail">Molitve Detail</string>

</resources>
