<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBraon"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">


    <View
            android:id="@+id/bgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:background="@color/colorBraon"
            tools:ignore="MissingConstraints"/>
    <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniPostLabel
           android:id="@+id/idPostLabe"
           android:text="@string/pravoslavnipostlabel"
           android:layout_width="wrap_content"
           android:layout_height="32dp"
           android:textAlignment="center"
           android:textSize="22sp"
           android:fontFamily="@font/actor"
           android:textStyle="italic"
           android:textColor="@color/colorBanana"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="@+id/bgView"
           android:layout_marginTop="24dp"/>


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniGregorijanskiDatumLabel
           android:id="@+id/idGregorijanskiDatumLabel"
           android:text="@string/gregDatum"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textStyle="italic"
           android:textSize="20sp"
           android:textColor="@color/colorSiviText"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idPostLabe"
           android:layout_marginTop="8dp"
           android:fontFamily="@font/actor"/>
   <TextView
           android:id="@+id/idGregTextView"
           android:text="@string/novi_gregorijanski_datum"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="14sp"
           android:textStyle="italic"
           android:textColor="@color/colorTamnoSivo"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idGregorijanskiDatumLabel"
           android:layout_marginTop="4dp" android:fontFamily="@font/actor"/>


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavnaIkona
           android:id="@+id/idIkona"
           android:layout_width="145dp"
           android:layout_height="198dp"
           android:src="@drawable/ik_24"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idGregTextView"
           android:layout_marginTop="22dp"/>

   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniSvetacLabel
           android:id="@+id/idSvetacLabel"
           android:text="@string/svetac_label"
           android:layout_width="match_parent"
           android:layout_height="76dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idIkona"
           android:layout_marginTop="16dp"
           android:textAlignment="center"
           android:textStyle="italic"
           android:textSize="20sp"
           android:textColor="@color/colorSiviText"
           android:lines="3" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
           android:fontFamily="@font/actor"/>


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniJulijanskiDatumLabel
           android:id="@+id/idJulijanskiDatumLabel"
           android:text="@string/julijanski_datum"
           android:layout_width="wrap_content"
           android:layout_height="28dp"
           android:textAlignment="center"
           android:textSize="18sp"
           android:textStyle="italic"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idSvetacLabel"
           android:layout_marginTop="16dp"
           android:textColor="@color/colorBanana" android:fontFamily="@font/actor"/>

   <TextView
           android:id="@+id/idJulTextView"
           android:text="@string/stari_julijanski_kalendar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorTamnoSivo"
           android:textSize="14sp"
           android:textStyle="italic"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/idJulijanskiDatumLabel"
           android:layout_marginTop="4dp"
           android:fontFamily="@font/actor"/>


   <LinearLayout
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/idJulTextView"
           android:layout_marginTop="24dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">


     <!-- <ImageButton
              android:id="@+id/idBtnA"
              android:background="@drawable/btnshape"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_margin="5dp"
              android:src="@drawable/fb_1"
              tools:layout_editor_absoluteY="510dp"
              tools:layout_editor_absoluteX="186dp"
              android:contentDescription="@string/todo"/>
      <ImageButton
              android:id="@+id/idBtnB"
              android:background="@drawable/btnshape"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_margin="5dp"
              android:src="@drawable/fb_2"
              tools:layout_editor_absoluteY="510dp"
              tools:layout_editor_absoluteX="99dp"
              android:contentDescription="@string/todo"/>

      <ImageButton
              android:id="@+id/idBtnShare"
              android:background="@drawable/btnshape"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_margin="5dp"
              android:src="@drawable/fb_convert"
              android:contentDescription="@string/todo"/>


      <ImageButton
              android:id="@+id/idBtnC"
              android:background="@drawable/btnshape"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_margin="5dp"
              android:src="@drawable/fb_3"
              tools:layout_editor_absoluteY="510dp"
              tools:layout_editor_absoluteX="16dp"
              android:contentDescription="@string/todo"/>
      <ImageButton
              android:id="@+id/idBtnD"
              android:background="@drawable/btnshape"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_margin="5dp"
              android:src="@drawable/fb_4"
              tools:layout_editor_absoluteY="510dp"
              tools:layout_editor_absoluteX="266dp"
              android:contentDescription="@string/todo"/>-->
      <ImageView
              android:id="@+id/id_kalendar_imageA"
              android:contentDescription="@string/selekcija_kalendara_"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@drawable/btnshape"
              android:layout_margin="3dp"
              android:padding="5dp"
              android:onClick="otvoriKalendar"
              android:src="@drawable/kalendar">

      </ImageView>
      <ImageView
              android:id="@+id/id_kalendar_imageB"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@drawable/btnshape"
              android:layout_margin="3dp"
              android:padding="5dp"
              android:onClick="otvoriKatihizis"
              android:src="@drawable/bible">

      </ImageView>
      <ImageView
              android:id="@+id/id_kalendar_imageC"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@drawable/btnshape"
              android:layout_margin="3dp"
              android:padding="5dp"
              android:onClick="sharePravoslavca"
              android:src="@drawable/sharing_content">

      </ImageView>
      <ImageView
              android:id="@+id/id_kalendar_image"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@drawable/btnshape"
              android:layout_margin="3dp"
              android:padding="5dp"
              android:onClick="otvoriMolitvenik"
              android:src="@drawable/pray">

      </ImageView>

      <ImageView
              android:id="@+id/id_kalendar_imageE"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@drawable/btnshape"
              android:layout_margin="3dp"
              android:padding="5dp"
              android:onClick="otvoriInfo"
              android:src="@drawable/information">

      </ImageView>

   </LinearLayout>
   <com.google.android.gms.ads.AdView
           android:id="@+id/adView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
           app:adSize="SMART_BANNER"
           app:adUnitId="ca-app-pub-3940256099942544/6300978111"
           app:layout_constraintBottom_toBottomOf="@+id/bgView"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintHorizontal_bias="0.333">
   </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>


